--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -8,6 +8,7 @@
   height: 100%;
   position: fixed;
   overflow-x: hidden;
+  line-height: 1.25;
 }
 
 .masthead-title {
