--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -136,6 +136,7 @@ figure {
   display: block;
   margin-top: -0.5rem;
   margin-bottom: 1rem;
+  font-size: 14px;
   color: $midnight-text-color;
 
   @media (prefers-color-scheme: dark) {
