--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -37,7 +37,9 @@ $midnight-body-bg: #ffffff;
 $midnight-body-bg-dark: #1e1f20;
 $midnight-accent-light: rgba(10, 132, 255, 1);
 $midnight-accent-dark: rgba(10, 132, 255, 1);
-$midnight-code-light: rgba(10, 132, 255, 1);
-$midnight-code-dark: rgba(10, 132, 255, 1);
+$midnight-code-bg: #f3f6f9;
+$midnight-code-bg-dark: #24252b;
+$midnight-code-light: hsla(0, 0, 0, 0.8);
+$midnight-code-dark: hsla(0, 0%, 100%, 0.8);
 $midnight-header-light: #838383;
-$midnight-header-dark: #c0c0c0;
+$midnight-header-dark: #757373;
